--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>My name is <em>victor</em></p>
     <p>This is for <strong>CS 260</strong></p>
     <p>Click <strong><a href="info.html">here</a></strong> for more information about the class</p>
+    <p>Tod is the best!</p>
 </body>
 </html>
