--- a/index.html
+++ b/index.html
@@ -2,32 +2,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Users/victorvelasco/Documents/CS260/style.css">
     <title>Portflio</title>
 </head>
 <body>
-    <h1>Victor's Portfolio</h1>
-    <h2>About Me</h2>
-    <p>I am a determined student that has several years of experience mentoring others to<br> 
-    become the best version of themselves. As I focus on the details, I have been able to<br>
-    greatly impact the lives of others. I aim to be diligent in all I do so that I may be<br>
-    a positive contributor to my community and the world that surrounds me. </p>
-    <hr>
-    <h2>Projects</h2>
-    <ul>
-        <li>C++ Tic Tac Toe Game</li>
-        <li>C++ Numbers Guessing Game</li>
-        <li>C++ Hangman Game</li>
-    </ul>
-    <hr>
-    <h2>Relevant Experience</h2>
-    <ol>
-        <li>Website Designer with Etrafficers Inc.</li>
-    </ol>
-    <hr>
-    <h2>Contact</h2>
-    <p>Email: victorvelasco@gmail.com<br>
-    LinkedIn: <a href="https://www.linkedin.com/in/victor-velasco/">My Profile</a><br>
-    Github: <a href="https://github.com/victorvel">Github Profile</a></p>
-
+    <header>
+        <ul>
+            <li>About Me</li>
+            <li>Projects</li>
+            <li>Relevant Experience</li>
+            <li>Contact</li>
+        </ul>
+    </header>
+    <div id="home-page">
+        <h1>Victor's Portfolio</h1>
+    </div>
+    <div class="full-body">
+        <h2>About Me</h2>
+        <p>I am a determined student that has several years of experience mentoring others to<br> 
+        become the best version of themselves. As I focus on the details, I have been able to<br>
+        greatly impact the lives of others. I aim to be diligent in all I do so that I may be<br>
+        a positive contributor to my community and the world that surrounds me. </p>
+        <h2>Projects</h2>
+        <ul>
+            <li>C++ Tic Tac Toe Game</li>
+            <li>C++ Numbers Guessing Game</li>
+            <li>C++ Hangman Game</li>
+        </ul>
+        <h2>Relevant Experience</h2>
+        <ol>
+            <li>Website Designer with Etrafficers Inc.</li>
+        </ol>
+        <h2>Contact</h2>
+        <p>Email: victorvelasco@gmail.com<br>
+        LinkedIn: <a href="https://www.linkedin.com/in/victor-velasco/">My Profile</a><br>
+        Github: <a href="https://github.com/victorvel">Github Profile</a></p>
+    </div>
 </body>
 </html>
