--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Users/victorvelasco/Documents/CS260/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Portflio</title>
 </head>
 <body>
