--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <div id="home-page">
         <h1>Victor's Portfolio</h1>
     </div>
+    <div class="flex-box">
+        <div>
+            <h2>About Me</h2>
+        </div>
+        <div>
+            <h2>Projects</h2>
+        </div>
+        <div>
+            <h2>Contact Me</h2>
+        </div>
+    </div>
     <div class="full-body">
         <h2>About Me</h2>
         <p>I am a determined student that has several years of experience mentoring others to<br> 
