--- a/index.html
+++ b/index.html
@@ -8,47 +8,17 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li>About Me</li>
-            <li>Projects</li>
-            <li>Relevant Experience</li>
-            <li>Contact</li>
-        </ul>
+        <a href="#">V&sup2</a>
+        <a href="#">Projects</a>
+        <a href="#">Resume</a>
+        <a href="#">About Me</a>
+        <a href="#">Contact</a>
     </header>
-    <div id="home-page">
-        <h1>Victor's Portfolio</h1>
-    </div>
-    <div class="flex-box">
+    <div class="hero-img">
         <div>
-            <h2>About Me</h2>
+            <h1>Victor Velasco // BYU CS Major</h1>
+            <p>Welcome to my website</p>
         </div>
-        <div>
-            <h2>Projects</h2>
-        </div>
-        <div>
-            <h2>Contact Me</h2>
-        </div>
-    </div>
-    <div class="full-body">
-        <h2>About Me</h2>
-        <p>I am a determined student that has several years of experience mentoring others to<br> 
-        become the best version of themselves. As I focus on the details, I have been able to<br>
-        greatly impact the lives of others. I aim to be diligent in all I do so that I may be<br>
-        a positive contributor to my community and the world that surrounds me. </p>
-        <h2>Projects</h2>
-        <ul>
-            <li>C++ Tic Tac Toe Game</li>
-            <li>C++ Numbers Guessing Game</li>
-            <li>C++ Hangman Game</li>
-        </ul>
-        <h2>Relevant Experience</h2>
-        <ol>
-            <li>Website Designer with Etrafficers Inc.</li>
-        </ol>
-        <h2>Contact</h2>
-        <p>Email: victorvelasco@gmail.com<br>
-        LinkedIn: <a href="https://www.linkedin.com/in/victor-velasco/">My Profile</a><br>
-        Github: <a href="https://github.com/victorvel">Github Profile</a></p>
     </div>
 </body>
 </html>
